Add replies_linear option
